Revert "Fix menu-slide overlapping"
This reverts commit 7eb573258a941b767cecef19789e9f653e64912b.

--- a/css/base.css
+++ b/css/base.css
@@ -61,6 +61,9 @@ body {
 /****************************** HEADER ************************************/
 header{
 	z-index: 2;
+    position: absolute;
+    top: 0;
+    left: 0;
 	background: white;
 	text-align: center;
 	width: 100vw;
